--- a/partials/japanese_day.html
+++ b/partials/japanese_day.html
@@ -1,59 +1,79 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="index.css"/>
+		<link type="text/css" rel="stylesheet" href="../css/index.css"/>
+		<link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		<title>A Day in the Life of a Japanese Teenager</title>
 	</head>
 	<body>
-<h2>A Day in the Life of a Japanese Teenager</h2>
-	<img class="img-text" src="images/day_train.JPG" alt="arrive at train station">
-	<img class="img-text" src="images/day_station.JPG" alt="at the final train station">
-	<img class="img-text" src="images/day_city.JPG" alt="what the city looks like">
-	<img class="img-text" src="images/day_cleaning.JPG" alt="classmates help clean the school">
-	<p> 
-	<img class="img-text" src="images/day_lunch.JPG" alt="obento lunch made from mom">
-	<img class="img-text" src="images/day_club.JPG" alt="club">
-	<img class="img-text" src="images/day_club_team.JPG" alt="team at kendo practice">
-	<img class="img-text" src="images/day_club_shodo.JPG" alt="shodo calligraphy club">
-	
 
-		Explanation of what the project is
-	</p>
-
-
-	<h3>
-		Wake Up and get ready for school
-	</h3>
-	<p>
-		Small house, school uniform, fish for breakfast, take public transportation
-	</p>
-
-
-
-	<h3>
-		At school 
-	</h3>
-	<p>
-		Bowing, stay in one room and teachers rotate, applying for high school, bukatsu afterwards
-	</p>
-
-
-
-	<h3>
-		Evening
-	</h3>
-	<p>
-		Go home for dinner, then  jyuku, your dad gets home, bath, bed.
-	</p>
-
-
-	
-	<h4>Site Map</h4>
+	<div id="menu">
 		<ul>
-			<li><a href="http://ec2-50-112-21-115.us-west-2.compute.amazonaws.com/Lab2/">Home Page</a></li>
+			<li><a href="http://ec2-50-112-21-115.us-west-2.compute.amazonaws.com/Lab2/">Home</a></li>
+			<li><a href="http://ec2-50-112-21-115.us-west-2.compute.amazonaws.com/Lab2/partials/temple.html">Temple</a></li>
+			<li><a href="#">Topaz</a></li>
+			<li><a href="http://ec2-35-167-162-79.us-west-2.compute.amazonaws.com/creativeLabOne/pages.html#">Food</a></li>			
 		</ul>
+	</div>
+
+<h1 class="page-title">A Day in the Life of a Japanese Teenager</h1>
+
+<div class="container">
+	<img class="img-text col-sm-12 col-lg-12" src="../images/day_train.JPG" alt="arrive at train station">
+	<div class="mult-p">
+	<p class="text">
+		When your alarm goes off in the morning, you aren't sleeping in a bed: you're in a futon. The best way to describe it is probably "foldable matress on the floor." The bedroom you are in is pretty small, too. After a nice breakfast of rice, fish, and soup, you put on your school uniform and head to the small neighborhood train station to go to school. 
+	</p>
+	</div>
+	<img class="img-text col-sm-12 col-lg-12" src="../images/day_station.JPG" alt="at the final train station">
+	<div class="mult-p">
+	<p class="text">
+		Students and workers alike climb the stairs inside the larger station. You head over to get your bike that you store at the train station. Legally, only those under the age of 13 are required to wear a bike helmet, so after finishing eighth grade you never wear a bike helmet again. 
+	</p>
+	</div>
+	<img class="img-text col-sm-12 col-lg-12 rotate-right" src="../images/day_city.JPG" alt="what the city looks like">
+	<div class="mult-p">
+	<p class="text">
+		This city  has a population of about 150,000 and is one of the smallest cities in this part of the country. Make sure you stay on the left side of the road!
+	</p>
+	</div>
+	<img class="img-text col-sm-12 col-lg-12" src="../images/day_cleaning.JPG" alt="classmates help clean the school">
+	<p class="text">You sit down in your seat for homeroom and the class president leads the class in "gorei," which could loosely be translated as "honorific respect." "Kiritsu," she calls out. Everyone stands. "Kiyotsuke!" (At attention!) Then, "rei" at which we all bow to the front of the classroom to show respect to the teacher. At the final call, "Chakuseki" we all sit again. Homeroom begins. 
+	</p>
+	<p class="text">
+	Between that and our next class of the day, we are expected to clean. Not just tidying our desks and straightening our lockers, but cleaning the school as all students are expected to do so in Japan. You rotate between sweeping the classroom, mopping the hallway, and cleaning the bathroom. 
+	</p>
+	<p class="text">After cleaning, we go back to the same room. Our homeroom teacher has already taken her stuff and gone to her next class. Pretty soon our math teacher shows up. The bell rings at the end of math class, so that teacher leaves and we wait for our history teacher to arrive. "Sorry I'm late," he apologizes, walking in just after the bell rang to start the next class. "A student had a couple of questions for me."
+	</p>
+	<img class="img-text col-sm-12 col-lg-12" src="../images/day_lunch.JPG" alt="obento lunch made from mom">
+	<p class="text">It's finally time for lunch! Our school has about 400 students but our cafeteria seats 30, so most people eat in their classroom. Most students have "obento" for lunch, small boxed meals often made by their mother. It's usually a serving of rice (today you have some seaweed and a pickled plum on top), some fish or meat, and vegtables. If you're luck and get a dessert, it is usually a slice or two fruit. 
+	</p>
+	<p class="text">
+	We push our desks back into lines and close our obento; science class is next. Classes are hard, but they're pretty bearable: unlike America, where most students go to their neighborhood school, in Japan everyone applies for high school. Usually there is a school or two in every town that accepts just about anybody. But if you don't get accepted to high school... You don't go: school in Japan is mandatory only though the end of junior high school, the end of 9th grade.
+	</p>
+	<p class="text">Nearby there is a high school that focuses on STEM, a high school that focuses on trade and technology, a high school that is best known for strong sports teams... This is school is well-known for two of their programs: an entrapraneur program and the cooking classes they offer. A lot of the graduates go on to get degrees in business, accounting, or open their own resturants. 
+	</p>
+	<img class="img-text col-sm-12 col-lg-12" src="../images/day_club_team.JPG" alt="team at kendo practice">
+	<p class="text">After a long day of classes, you might be ready for a break! But most students participate in "bukatsu", a team or club of some sort right after school. Usually, bukatsu meets for three to four hours every weekday, and another five or six during the weekend. Many clubs meet seven days a week, and about 350 days a year (you get a week  off for New Years and a week off in August). There are martial arts (kendo, judo, karate), western sports (soccer and baseball are the most popular), and artistic clubs (choir,  orchestra, calligraphy). This is a close up of a student who is part of the kendo team. 
+	</p>
+	<img class="img-text col-sm-12 col-lg-12 rotate-right" src="../images/day_club_shodo.JPG" alt="shodo calligraphy club">
+	<p class="text">
+	Afer club, you hurry to catch the next train on your way home. After a quick dinner with your mom and siblings, you head out the door again. It's time for "jyuku," or, "cram school." Applying for high school was competetive, but applying for college is even worse. Stateside, everyone can just take the SAT/ACT, but here every school has a different entrance exam. Classes at school do help somewhat as you prepare for the entrance exams, but there is only so much that the teachers can do. Going to cram school helps because the student-to-teacher ratio is so much better. After jyuku, you hurry home and start your homework for school. 
+	</p>
+	<p class="text">
+	After working on it for a while,  you hear your dad open the front door. He's finally home from work! He bought some ice cream on his way home from work, but mom's a little annoyed that he's come home this late. He tries to apologize, but he's a little drunk and his words are slurred: "Hun, you know that it was a work party for the boss. If I didn't go..." He trails off. Mom doesn't say anything because she knows that he's right: not going to, or not drinking at, those work parties can have long term consequences for any employee in Japan. Getting fired, or best case scenario, being social exiled and never getting promoted. 
+	</p>
+	<p class="text"> It's getting close to midnight so you shower and then get in the bathrub for a quick soak. You're the oldest kid, so you go right after your dad. After that, your younger siblings shower and then soak in the same bath water that you and your dad used. Mom goes last so she can scrub the tub afterwards. After you blow dry your hair (there is no central air, so, like most families, you only heat one room at a time--- this means that, in the winter, your bedroom gets mighty cold. Like most houses, there is minimal insulation in the walls). You pull your futon out of the closet, unfold it, and climb into the blankets, exhausted. You'll have to be out of the house by 7:15 tomorrow morning to catch that train for school! 
+	</p>	
+</div> 
+
+	<div class="footer">
+		<p>Website produced and maintained by BYU students Naomi Johnson and Scott Frodsham</p>
+		<p>All photos and artwork property of Naomi Johnson © 2017</p>
+	</div>
+
 	</body>
 </html>
 
