--- a/partials/temple.html
+++ b/partials/temple.html
@@ -2,51 +2,56 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="index.css"/>
+		<link type="text/css" rel="stylesheet" href="../css/index.css"/>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+		<link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<title>Buddhist Temple</title>
 	</head>
 	<body>
-	<h2>
+
+
+	<div id="menu">
+		<ul>
+			<li><a href="http://ec2-50-112-21-115.us-west-2.compute.amazonaws.com/Lab2/">Home</a></li>
+			<li><a href="http://ec2-50-112-21-115.us-west-2.compute.amazonaws.com/Lab2/partials/japanese_day.html">DITL</a></li>
+			<li><a href="#">Topaz</a></li>
+			<li><a href="http://ec2-35-167-162-79.us-west-2.compute.amazonaws.com/creativeLabOne/pages.html#">Food</a></li>			
+		</ul>
+	</div>
+
+
+	<h1 class="page-title">
 		Japanese Religions and Buddhism in Utah
-	</h2>
-		
-<h4>About</h4>
+	</h1>
+	<div class="container">
 
-	<img class="img-text" src="images/temple_members.jpg" alt="members at SLC Buddhist temple">
-	<img class="img-text" src="images/temple_leaders.jpg" alt="leaders at SLC Buddhist temple">
-	<p>
-	There are three primary religions in Japan: Buddhism,  Shintoism, and Confucianism. Among these three, Confucianism is widly considered a way of thought, Shintoism is regarded as ___ and Buddhism is considered a religion. Buddhist temples are fairly easy to find in North America but Shinto Shrines are hard to find. Confucianism, which was taught in schools, is ___ in America. 
-	</p>
-	<p> 
-	Just as Christianity stemmed from Jesus Christ but had many different sects break off from it with reformers and restorers, the same thing happened with Buddhism. Originally, ___. DISCUSS THE  HISTORY, ETC.  Since then, many _____. Talk about how many different countries have different prefered religions. Which one is most common/famous  in Japan. 
-	</p>
-	<p> 
-	Jodo Shinshu is (??????) one of the most common branches of (Japanese) Buddhism in America. The Jodo Shinshu headquarters are located in Kyoto, Japan. They have temples all around the world and one in SLC. According to their website, they meet most Sundays at 10AM. 
-	</p>
- 	<p> As we enter the 21st century, Jodo Shinshu Buddhism is at a crossroads in its development and expansion in the United States of America. Although Jodo Shinshu has been in the United States since 1899, we are still in the beginning stages of truly becoming a part of the larger religious landscape of this country. Through the personal sacrifice and determination of the Japanese immigrants and their descendants our temple exists today. However, we now find ourselves living in a changed environment from that of our founders. To meet these ever changing needs, we must develop a new methodology by combining the sacrifice and determination of our pioneer members with new ideas, to ensure the continuation of Jodo Shinshu in our present community.
- 	</p>
- 	<p>Jodo Shinshu Buddhism has much to offer in teaching us about living a spiritually awakened life, in the midst of ordinary circumstances. To follow the Nembutsu path is to live a life of gratitude for Amida Buddha's infinite wisdom and compassion. Our Temple is here to help us understand how we may express appreciation for the wondrous gift of Shinjin bestowed upon us.
- 	</p>
-	<p> Within these pages we will explain the methodology and functions of the temple as well as a brief summary of our history, beliefs, etiquette, etc. Our temple exists for you. Please play an active role in the life of our temple.
-	</p>
+	<img class="img-text rotate-right col-sm-12 col-lg-12" src="../images/buddah.JPG" alt="statue of Buddah">
 	
+	<p class="text">
+	There are three primary religions in Japan: Buddhism,  Shintoism, and Confucianism. Among these three, Buddhism is a religion while Confucianism is widly considered a way of thought. Many consider Shintoism to be a mix between a religion and a worldview. Buddhism is the most widespread in North America. 
+	</p>
+	<img class="img-text col-sm-12 col-lg-12" src="../images/funeral_day.JPG" alt="Head priest about to leave for a funeral">
+	<p class="text"> 
+	Just as Christianity stemmed from Jesus Christ but had many different sects break off from it with reformers and restorers, the same thing happened with Buddhism. The various sects' differences were magnified as they spread across Asia.  
+	</p>
+	<p class="text"> 
+	Jodo Shinshu is one of the most common branches of (Japanese) Buddhism in America. The Jodo Shinshu headquarters are located in Kyoto, Japan. They have temples all around the world and one in SLC. According to the SLC temple's <a href="http://www.slbuddhist.org/">website</a>, they meet most Sundays at 10AM. 
+	</p>
+	<h4 class="sections contact"> Contact the Temple:</h4>
+	<p class="text">Rev. Jerry Hirano at jhirano@slbuddhist.org</p>
+	<p class="text">
+	Salt Lake Buddhist Temple
+	211 West 100 South
+	Salt Lake City, UT 84101
+	</p>
 
+	</div>
+	<div class="footer">
+		<p >Website produced and maintained by BYU students Naomi Johnson and Scott Frodsham</p>
+		<p >All photos and artwork property of Naomi Johnson © 2017</p>
+	</div>
 
-
-	<h4>Site Map</h4>
-	<ul>
-		<li><a href="http://ec2-50-112-21-115.us-west-2.compute.amazonaws.com/Lab2/">Home Page</a></li>
-	</ul>
-
-	<h6> Contact the Temple:<h6>
-	<p>Rev. Jerry Hirano at jhirano@slbuddhist.org</p>
-<p>
-Salt Lake Buddhist Temple
-211 West 100 South
-Salt Lake City, UT 84101
-</p>
 	</body>
 </html>
 
