--- a/css/index.css
+++ b/css/index.css
@@ -5,8 +5,6 @@
     padding-bottom: 3%;
 }
 
-
-
 .header {
     margin-bottom: 10%; 
 }
@@ -18,32 +16,104 @@
 }
 
 
+/*THIS IS ON EVERYTHING*/
+.container {
+
+}
+
 .footer {
     /*center it*/ 
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
-    padding-bottom: 3%;
-    padding-top: 6%;
+    padding-bottom: 6%;
+    padding-top: 12%;
 }
+
 /*THIS IS IN BOTH TEMPLE/DAY-OF PAGE STUFF*/
 .img-text {
     width:100%;
+    padding-bottom: 5%;
+    padding-top: 5%;
+
+}
+.page-title {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 
 .text {
     font-family: 'Open Sans', sans-serif;
+    text-align: left;
+    padding-left: 7%;
+    padding-right:7%;
 }
 
 .sections {
     font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
+
+.rotate-right {
+    transform: rotate(90deg);
+    padding-top: 10%;
+    padding-bottom: 20%;
 }
 
 /*THIS IS THE TEMPLE PAGE STUFF*/
-
+.contact {
+    padding-bottom: 5%;
+    padding-top: 5%;
+}
 
 
 
 /*THIS IS THE DAY-IN-THE-LIFE-OF PAGE STUFF*/
 
+/*SCOTT'S STUFF*/
+/*THIS IS THE DAY-IN-THE-LIFE-OF PAGE STUFF*/
+
+#menu
+{
+    background-color: white;
+    text-align: center;
+    margin: 0 auto;
+    width: 90%;
+}
+
+#menu ul
+{
+    display: inline-block;
+    margin: 0 auto;
+    padding-top: 7%;
+    list-style-type: none;
+}
+
+#menu li
+{
+    list-style: none;
+    float: left;
+    margin-right: 5em;
+}
+
+#menu a
+{
+    display: block;
+    border-radius: 50%;
+    font-family: 'Montserrat', sans-serif;
+    line-height: 4.5em;
+    height: 4.5em;
+    width: 4.5em;
+    color: white;
+    background-color: #ED1C24;
+    text-decoration: none;
+    text-align: center;
+}
+
+#menu a:hover
+{
+    background-color: red;
+}
